T1/src/t1/LuaParser.java
// Generated from Lua.g4 by ANTLR 4.5.1
package t1;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LuaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		And=1, Or=2, Break=3, Do=4, Else=5, Elseif=6, End=7, False=8, For=9, Function=10, 
		If=11, In=12, Local=13, Nil=14, Not=15, Repeat=16, Return=17, Then=18, 
		True=19, Until=20, While=21, ParenE=22, ParenD=23, PontoVir=24, PontoFinal=25, 
		Virgula=26, Pontos3=27, OpAtrib=28, OpRel=29, Menos=30, Mais=31, DoisPontos=32, 
		Multiplicar=33, Dividir=34, Modulo=35, Potencia=36, Nome=37, CadeiaCaracteres=38, 
		ConstanteNumerica=39, Comentario=40, WS=41;
	public static final int
		RULE_programa = 0, RULE_trecho = 1, RULE_comando = 2, RULE_ultimocomando = 3, 
		RULE_nomedafuncao = 4, RULE_nomeF = 5, RULE_corpodafuncao = 6, RULE_listaexp = 7, 
		RULE_exp = 8, RULE_exp2 = 9, RULE_constanteNumerica = 10, RULE_opUn = 11, 
		RULE_listapar = 12, RULE_nome = 13, RULE_listadenomes = 14, RULE_expprefixo = 15, 
		RULE_var = 16, RULE_chamadadefuncao = 17, RULE_listavar = 18, RULE_opArit1 = 19, 
		RULE_opArit2 = 20, RULE_opBinaria = 21;
	public static final String[] ruleNames = {
		"programa", "trecho", "comando", "ultimocomando", "nomedafuncao", "nomeF", 
		"corpodafuncao", "listaexp", "exp", "exp2", "constanteNumerica", "opUn", 
		"listapar", "nome", "listadenomes", "expprefixo", "var", "chamadadefuncao", 
		"listavar", "opArit1", "opArit2", "opBinaria"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'and'", "'or'", "'break'", "'do'", "'else'", "'elseif'", "'end'", 
		"'false'", "'for'", "'function'", "'if'", "'in'", "'local'", "'nil'", 
		"'not'", "'repeat'", "'return'", "'then'", "'true'", "'until'", "'while'", 
		"'('", "')'", "';'", "'.'", "','", "'...'", "'='", null, "'-'", "'+'", 
		"'..'", "'*'", "'/'", "'%'", "'^'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "And", "Or", "Break", "Do", "Else", "Elseif", "End", "False", "For", 
		"Function", "If", "In", "Local", "Nil", "Not", "Repeat", "Return", "Then", 
		"True", "Until", "While", "ParenE", "ParenD", "PontoVir", "PontoFinal", 
		"Virgula", "Pontos3", "OpAtrib", "OpRel", "Menos", "Mais", "DoisPontos", 
		"Multiplicar", "Dividir", "Modulo", "Potencia", "Nome", "CadeiaCaracteres", 
		"ConstanteNumerica", "Comentario", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lua.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    public static String grupo= "<507087, 726523, 726588>";

	public LuaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramaContext extends ParserRuleContext {
		public TrechoContext trecho() {
			return getRuleContext(TrechoContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			trecho();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TrechoContext extends ParserRuleContext {
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public UltimocomandoContext ultimocomando() {
			return getRuleContext(UltimocomandoContext.class,0);
		}
		public List<TerminalNode> PontoVir() { return getTokens(LuaParser.PontoVir); }
		public TerminalNode PontoVir(int i) {
			return getToken(LuaParser.PontoVir, i);
		}
		public TrechoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trecho; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterTrecho(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitTrecho(this);
		}
	}

	public final TrechoContext trecho() throws RecognitionException {
		TrechoContext _localctx = new TrechoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_trecho);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Do) | (1L << For) | (1L << Function) | (1L << If) | (1L << Local) | (1L << Repeat) | (1L << Nome))) != 0)) {
				{
				{
				setState(46);
				comando();
				setState(48);
				_la = _input.LA(1);
				if (_la==PontoVir) {
					{
					setState(47);
					match(PontoVir);
					}
				}

				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			_la = _input.LA(1);
			if (_la==Break || _la==Return) {
				{
				setState(55);
				ultimocomando();
				setState(57);
				_la = _input.LA(1);
				if (_la==PontoVir) {
					{
					setState(56);
					match(PontoVir);
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandoContext extends ParserRuleContext {
		public ListavarContext listavar() {
			return getRuleContext(ListavarContext.class,0);
		}
		public TerminalNode OpAtrib() { return getToken(LuaParser.OpAtrib, 0); }
		public ListaexpContext listaexp() {
			return getRuleContext(ListaexpContext.class,0);
		}
		public ChamadadefuncaoContext chamadadefuncao() {
			return getRuleContext(ChamadadefuncaoContext.class,0);
		}
		public TerminalNode Do() { return getToken(LuaParser.Do, 0); }
		public List<TrechoContext> trecho() {
			return getRuleContexts(TrechoContext.class);
		}
		public TrechoContext trecho(int i) {
			return getRuleContext(TrechoContext.class,i);
		}
		public TerminalNode End() { return getToken(LuaParser.End, 0); }
		public TerminalNode Function() { return getToken(LuaParser.Function, 0); }
		public NomedafuncaoContext nomedafuncao() {
			return getRuleContext(NomedafuncaoContext.class,0);
		}
		public CorpodafuncaoContext corpodafuncao() {
			return getRuleContext(CorpodafuncaoContext.class,0);
		}
		public TerminalNode If() { return getToken(LuaParser.If, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> Then() { return getTokens(LuaParser.Then); }
		public TerminalNode Then(int i) {
			return getToken(LuaParser.Then, i);
		}
		public List<TerminalNode> Elseif() { return getTokens(LuaParser.Elseif); }
		public TerminalNode Elseif(int i) {
			return getToken(LuaParser.Elseif, i);
		}
		public TerminalNode Else() { return getToken(LuaParser.Else, 0); }
		public TerminalNode Repeat() { return getToken(LuaParser.Repeat, 0); }
		public TerminalNode Until() { return getToken(LuaParser.Until, 0); }
		public TerminalNode For() { return getToken(LuaParser.For, 0); }
		public NomeContext nome() {
			return getRuleContext(NomeContext.class,0);
		}
		public List<TerminalNode> Virgula() { return getTokens(LuaParser.Virgula); }
		public TerminalNode Virgula(int i) {
			return getToken(LuaParser.Virgula, i);
		}
		public ListadenomesContext listadenomes() {
			return getRuleContext(ListadenomesContext.class,0);
		}
		public TerminalNode In() { return getToken(LuaParser.In, 0); }
		public TerminalNode Local() { return getToken(LuaParser.Local, 0); }
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitComando(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comando);
		int _la;
		try {
			setState(130);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				listavar();
				setState(62);
				match(OpAtrib);
				setState(63);
				listaexp();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				chamadadefuncao();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				match(Do);
				setState(67);
				trecho();
				setState(68);
				match(End);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				match(Function);
				setState(71);
				nomedafuncao();
				setState(72);
				corpodafuncao();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(74);
				match(If);
				setState(75);
				exp();
				setState(76);
				match(Then);
				setState(77);
				trecho();
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Elseif) {
					{
					{
					setState(78);
					match(Elseif);
					setState(79);
					exp();
					setState(80);
					match(Then);
					setState(81);
					trecho();
					}
					}
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(90);
				_la = _input.LA(1);
				if (_la==Else) {
					{
					setState(88);
					match(Else);
					setState(89);
					trecho();
					}
				}

				setState(92);
				match(End);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(94);
				match(Repeat);
				setState(95);
				trecho();
				setState(96);
				match(Until);
				setState(97);
				exp();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(99);
				match(For);
				setState(100);
				nome();
				setState(101);
				match(OpAtrib);
				setState(102);
				exp();
				setState(103);
				match(Virgula);
				setState(104);
				exp();
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Virgula) {
					{
					{
					setState(105);
					match(Virgula);
					setState(106);
					exp();
					}
					}
					setState(111);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(112);
				match(Do);
				setState(113);
				trecho();
				setState(114);
				match(End);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(116);
				match(For);
				setState(117);
				listadenomes();
				setState(118);
				match(In);
				setState(119);
				listaexp();
				setState(120);
				match(Do);
				setState(121);
				trecho();
				setState(122);
				match(End);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(124);
				match(Local);
				setState(125);
				listadenomes();
				setState(128);
				_la = _input.LA(1);
				if (_la==OpAtrib) {
					{
					setState(126);
					match(OpAtrib);
					setState(127);
					listaexp();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UltimocomandoContext extends ParserRuleContext {
		public TerminalNode Return() { return getToken(LuaParser.Return, 0); }
		public ListaexpContext listaexp() {
			return getRuleContext(ListaexpContext.class,0);
		}
		public TerminalNode Break() { return getToken(LuaParser.Break, 0); }
		public UltimocomandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ultimocomando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterUltimocomando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitUltimocomando(this);
		}
	}

	public final UltimocomandoContext ultimocomando() throws RecognitionException {
		UltimocomandoContext _localctx = new UltimocomandoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ultimocomando);
		int _la;
		try {
			setState(137);
			switch (_input.LA(1)) {
			case Return:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				match(Return);
				setState(134);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << False) | (1L << ParenE) | (1L << Menos) | (1L << Nome) | (1L << CadeiaCaracteres) | (1L << ConstanteNumerica))) != 0)) {
					{
					setState(133);
					listaexp();
					}
				}

				}
				break;
			case Break:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(Break);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NomedafuncaoContext extends ParserRuleContext {
		public NomeFContext nomeF;
		public NomeFContext nomeF() {
			return getRuleContext(NomeFContext.class,0);
		}
		public NomedafuncaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nomedafuncao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterNomedafuncao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitNomedafuncao(this);
		}
	}

	public final NomedafuncaoContext nomedafuncao() throws RecognitionException {
		NomedafuncaoContext _localctx = new NomedafuncaoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_nomedafuncao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			((NomedafuncaoContext)_localctx).nomeF = nomeF();
			TabelaDeSimbolos.adicionarSimbolo((((NomedafuncaoContext)_localctx).nomeF!=null?_input.getText(((NomedafuncaoContext)_localctx).nomeF.start,((NomedafuncaoContext)_localctx).nomeF.stop):null), Tipo.FUNCAO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NomeFContext extends ParserRuleContext {
		public List<TerminalNode> Nome() { return getTokens(LuaParser.Nome); }
		public TerminalNode Nome(int i) {
			return getToken(LuaParser.Nome, i);
		}
		public TerminalNode PontoFinal() { return getToken(LuaParser.PontoFinal, 0); }
		public NomeFContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nomeF; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterNomeF(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitNomeF(this);
		}
	}

	public final NomeFContext nomeF() throws RecognitionException {
		NomeFContext _localctx = new NomeFContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nomeF);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(Nome);
			setState(145);
			_la = _input.LA(1);
			if (_la==PontoFinal) {
				{
				setState(143);
				match(PontoFinal);
				setState(144);
				match(Nome);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CorpodafuncaoContext extends ParserRuleContext {
		public TerminalNode ParenE() { return getToken(LuaParser.ParenE, 0); }
		public TerminalNode ParenD() { return getToken(LuaParser.ParenD, 0); }
		public TrechoContext trecho() {
			return getRuleContext(TrechoContext.class,0);
		}
		public TerminalNode End() { return getToken(LuaParser.End, 0); }
		public ListaparContext listapar() {
			return getRuleContext(ListaparContext.class,0);
		}
		public CorpodafuncaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpodafuncao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterCorpodafuncao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitCorpodafuncao(this);
		}
	}

	public final CorpodafuncaoContext corpodafuncao() throws RecognitionException {
		CorpodafuncaoContext _localctx = new CorpodafuncaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_corpodafuncao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(ParenE);
			setState(149);
			_la = _input.LA(1);
			if (_la==Pontos3 || _la==Nome) {
				{
				setState(148);
				listapar();
				}
			}

			setState(151);
			match(ParenD);
			setState(152);
			trecho();
			setState(153);
			match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaexpContext extends ParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> Virgula() { return getTokens(LuaParser.Virgula); }
		public TerminalNode Virgula(int i) {
			return getToken(LuaParser.Virgula, i);
		}
		public ListaexpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaexp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterListaexp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitListaexp(this);
		}
	}

	public final ListaexpContext listaexp() throws RecognitionException {
		ListaexpContext _localctx = new ListaexpContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_listaexp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			exp();
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Virgula) {
				{
				{
				setState(156);
				match(Virgula);
				setState(157);
				exp();
				}
				}
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public Exp2Context exp2() {
			return getRuleContext(Exp2Context.class,0);
		}
		public OpBinariaContext opBinaria() {
			return getRuleContext(OpBinariaContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitExp(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		ExpContext _localctx = new ExpContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_exp);
		try {
			setState(168);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(163);
				exp2();
				setState(164);
				opBinaria();
				setState(165);
				exp();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(167);
				exp2();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp2Context extends ParserRuleContext {
		public TerminalNode False() { return getToken(LuaParser.False, 0); }
		public TerminalNode CadeiaCaracteres() { return getToken(LuaParser.CadeiaCaracteres, 0); }
		public ConstanteNumericaContext constanteNumerica() {
			return getRuleContext(ConstanteNumericaContext.class,0);
		}
		public ExpprefixoContext expprefixo() {
			return getRuleContext(ExpprefixoContext.class,0);
		}
		public OpUnContext opUn() {
			return getRuleContext(OpUnContext.class,0);
		}
		public Exp2Context exp2() {
			return getRuleContext(Exp2Context.class,0);
		}
		public Exp2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterExp2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitExp2(this);
		}
	}

	public final Exp2Context exp2() throws RecognitionException {
		Exp2Context _localctx = new Exp2Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_exp2);
		try {
			setState(177);
			switch (_input.LA(1)) {
			case False:
				enterOuterAlt(_localctx, 1);
				{
				setState(170);
				match(False);
				}
				break;
			case CadeiaCaracteres:
				enterOuterAlt(_localctx, 2);
				{
				setState(171);
				match(CadeiaCaracteres);
				}
				break;
			case ConstanteNumerica:
				enterOuterAlt(_localctx, 3);
				{
				setState(172);
				constanteNumerica();
				}
				break;
			case ParenE:
			case Nome:
				enterOuterAlt(_localctx, 4);
				{
				setState(173);
				expprefixo();
				}
				break;
			case Menos:
				enterOuterAlt(_localctx, 5);
				{
				setState(174);
				opUn();
				setState(175);
				exp2();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstanteNumericaContext extends ParserRuleContext {
		public TerminalNode ConstanteNumerica() { return getToken(LuaParser.ConstanteNumerica, 0); }
		public ConstanteNumericaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constanteNumerica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterConstanteNumerica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitConstanteNumerica(this);
		}
	}

	public final ConstanteNumericaContext constanteNumerica() throws RecognitionException {
		ConstanteNumericaContext _localctx = new ConstanteNumericaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_constanteNumerica);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(ConstanteNumerica);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpUnContext extends ParserRuleContext {
		public TerminalNode Menos() { return getToken(LuaParser.Menos, 0); }
		public OpUnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opUn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterOpUn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitOpUn(this);
		}
	}

	public final OpUnContext opUn() throws RecognitionException {
		OpUnContext _localctx = new OpUnContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_opUn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(Menos);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
